<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddressActivity"
    android:id="@+id/root"
    android:padding="15dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/avatar_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.cardview.widget.CardView
            android:id="@+id/avatar_icon"
            android:layout_width="72dp"
            android:layout_height="72dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:foreground="@drawable/avatar_border"
            app:cardCornerRadius="36dp">
            <ImageView
                android:id="@+id/img_avatar"
                android:contentDescription="@string/dcp_avatar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/ic_user"
                android:background="@color/backColor"
                />
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/txt_username"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            app:layout_constraintLeft_toRightOf="@id/avatar_icon"
            android:text="@string/ellipsis"
            app:layout_constraintTop_toTopOf="@id/avatar_icon"
            app:layout_constraintBottom_toBottomOf="@id/avatar_icon"
            android:layout_marginLeft="10dp"
            android:textSize="20sp"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/avatar_card"
        app:layout_constraintBottom_toBottomOf="@id/root"
        android:orientation="vertical"
        android:layout_marginTop="15dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/AddressLabel"
                android:text="@string/street"
                />

            <EditText
                style="@style/AddressInput"
                android:inputType="text"
                />

            <TextView
                style="@style/AddressLabel"
                android:text="@string/ext_num"
                />

            <EditText
                style="@style/AddressInput"
                android:inputType="number"
                />

            <TextView
                style="@style/AddressLabel"
                android:text="@string/int_num"
                />

            <EditText
                style="@style/AddressInput"
                android:inputType="number"
                />

            <View style="@style/DivisorH"/>

            <TextView
                style="@style/AddressLabel"
                android:text="@string/colony"
                />

            <EditText
                style="@style/AddressInput"
                android:inputType="text"
                />

            <TextView
                style="@style/AddressLabel"
                android:text="@string/city"
                />

            <EditText
                style="@style/AddressInput"
                android:inputType="text"
                />

            <TextView
                style="@style/AddressLabel"
                android:text="@string/country"
                />

            <EditText
                style="@style/AddressInput"
                android:inputType="text"
                />

            <TextView
                style="@style/AddressLabel"
                android:text="@string/state"
                />

            <EditText
                style="@style/AddressInput"
                android:inputType="text"
                />

            <View style="@style/DivisorH"/>

            <TextView
                style="@style/AddressLabel"
                android:text="@string/postal_code"
                />

            <EditText
                style="@style/AddressInput"
                android:inputType="number"
                android:maxLength="5"
                />

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>