<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/avatar_card"
        android:layout_width="match_parent"
        android:layout_height="275dp"
        app:layout_constraintTop_toTopOf="parent">
        <ImageView
            android:id="@+id/img_banner"
            android:contentDescription="@string/dcp_banner"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:src="@drawable/ic_image"
            android:scaleType="center"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:background="@color/backColor"
            />
        <androidx.cardview.widget.CardView
            android:layout_width="150dp"
            android:layout_height="150dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:foreground="@drawable/avatar_border"
            app:cardCornerRadius="75dp">
            <ImageView
                android:id="@+id/img_avatar"
                android:contentDescription="@string/dcp_avatar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/ic_user"
                android:background="@color/backColor"
                />
        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <GridLayout
        android:id="@+id/contact_data"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:columnCount="2"
        android:rowCount="5"
        app:layout_constraintTop_toBottomOf="@id/avatar_card">

        <TextView
            android:id="@+id/txt_name"
            android:text="@string/ellipsis"
            android:layout_width="match_parent"
            android:gravity="center"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_columnSpan="2"
            android:textSize="25sp"
            android:layout_marginBottom="15dp"
            />

        <ImageView
            android:id="@+id/img_gender"
            android:contentDescription="@string/dcp_gender"
            android:layout_row="1"
            android:src="@drawable/ic_genderless"
            style="@style/CardIcon"
            />

        <TextView
            android:id="@+id/txt_gender_summary"
            android:text="@string/ellipsis"
            android:layout_row="1"
            style="@style/CardInfo"
            />

        <ImageView
            android:contentDescription="@string/dcp_email"
            android:layout_row="2"
            android:src="@drawable/ic_at"
            style="@style/CardIcon"
            />

        <TextView
            android:id="@+id/txt_email"
            android:text="@string/ellipsis"
            android:layout_row="2"
            style="@style/CardInfo"
            />

        <ImageView
            android:contentDescription="@string/dcp_phone"
            android:layout_row="3"
            android:src="@drawable/ic_phone"
            style="@style/CardIcon"
            />

        <TextView
            android:id="@+id/txt_phone_number"
            android:text="@string/ellipsis"
            android:layout_row="3"
            style="@style/CardInfo"
            />

        <ImageView
            android:contentDescription="@string/dcp_phone"
            android:layout_row="4"
            android:src="@drawable/ic_location_dot"
            style="@style/CardIcon"
            />

        <Button
            android:id="@+id/btn_address"
            android:text="@string/address"
            android:layout_row="4"
            style="@style/CardInfo"
            />

    </GridLayout>

</androidx.constraintlayout.widget.ConstraintLayout>